# ChangeLog for dev-python/nose
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/nose/ChangeLog,v 1.26 2009/04/06 18:16:45 armin76 Exp $

  06 Apr 2009; Raúl Porcel <armin76@gentoo.org> nose-0.10.4.ebuild:
  Add ~arm/~sh

  02 Mar 2009; Jeroen Roovers <jer@gentoo.org> nose-0.10.4.ebuild:
  Stable for HPPA (bug #236173).

  27 Feb 2009; Joseph Jezak <josejx@gentoo.org> nose-0.10.4.ebuild:
  Marked ppc/ppc64 stable for bug #236173.

  26 Feb 2009; Raúl Porcel <armin76@gentoo.org> nose-0.10.4.ebuild:
  alpha/ia64/s390 stable wrt #236173

  25 Feb 2009; Markus Meier <maekke@gentoo.org> nose-0.10.4.ebuild:
  amd64/x86 stable, bug #236173

  25 Feb 2009; Ferris McCormick <fmccor@gentoo.org> nose-0.10.4.ebuild:
  Sparc stable, Bug #236173.

  18 Oct 2008; Alexis Ballier <aballier@gentoo.org> nose-0.10.4.ebuild:
  keyword ~x86-fbsd, bug #233554

*nose-0.10.4 (11 Oct 2008)

  11 Oct 2008; Rob Cakebread <pythonhead@gentoo.org> -nose-0.10.0.ebuild,
  -nose-0.10.1.ebuild, +nose-0.10.4.ebuild:
  Version bump, removed old. Closes bug #241218

  04 Oct 2008; Brent Baude <ranger@gentoo.org> nose-0.9.3-r1.ebuild,
  nose-0.10.3.ebuild:
  Marking nose-0.9.3.-r1 and -0.10.3 ~ppc and ~ppc64

  01 Oct 2008; Raúl Porcel <armin76@gentoo.org> nose-0.9.3-r1.ebuild,
  nose-0.10.3.ebuild:
  Add ~alpha wrt #233554

  29 Sep 2008; Jeroen Roovers <jer@gentoo.org> nose-0.10.3.ebuild:
  Marked ~hppa (bug #233554).

  06 Aug 2008; Jesus Rivero <neurogeek@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

  01 Aug 2008; Raúl Porcel <armin76@gentoo.org> nose-0.9.3-r1.ebuild,
  nose-0.10.3.ebuild:
  Add ~ia64 wrt #233554

  01 Aug 2008; Ferris McCormick <fmccor@gentoo.org> nose-0.9.3-r1.ebuild,
  nose-0.10.3.ebuild:
  Added ~sparc, partly Bug #233554, which see. Both keyworded versions pass
  all tests.

*nose-0.10.3 (25 Jun 2008)

  25 Jun 2008; Ali Polatel <hawking@gentoo.org> +nose-0.10.3.ebuild: