@@ -1,7 +1,9 @@
 AUX nose-0.10.0-tests-nonetwork.patch 1127 RMD160 17d928c8f05676d653ed2ab9022d5c63e7929b8c SHA1 f79a86c8b1d42f8d6dd079e22caee4621315c44c SHA256 1eccfdde4ef59292e1bb517a28556c35ea4b899ab29b92cff4ea968219db3168
 DIST nose-0.10.3.tar.gz 271775 RMD160 ab06299c7106a1b318799cae5ac60be2e924ce2d SHA1 31a47c2b59d0cb513ca5ef8476a94c9194a34ff7 SHA256 78c15d680ed7165673487b71d434cf22f801085bcf8b20e9f4984dee03b30b52
 DIST nose-0.10.4.tar.gz 284311 RMD160 0a855579c2401f7a353d915b5ce21a7aa3dd5197 SHA1 e0235c0d4dad211357c073df2376f1d9775d342c SHA256 0c76fd1f8ef4a888cad8da3f0b426406dee030070bb2845316eabf1d8f4a1d36
+DIST nose-0.11.0.tar.gz 249789 RMD160 6256559220989b0d96778ee1e48393f701b9ae8b SHA1 d3a30a8cab3eacf5376b2f67fbd490072052cea6 SHA256 e527ec4671a721816dc614516b07aa52e47036091af6b75ee81fd109d63beb45
 EBUILD nose-0.10.3.ebuild 1259 RMD160 f34cd4f38ecf80d5781391ef26d77889defaeaac SHA1 2e772ea00356fee6847810d03bbcae6751210031 SHA256 022fddd46593ff5fc6d714db79194697793e8a55d4d9a246090a5f6971ce1dc9
 EBUILD nose-0.10.4.ebuild 1260 RMD160 2224de652bf657a2fa4559d2ac7883bacf1dfc86 SHA1 fac7eb9caece5226d732b34303764a51cbf0fabd SHA256 f09422176ec52f4fa558e80a74e4907b1cda671a4047cd5a4e09f1cbc157ff32
-MISC ChangeLog 3876 RMD160 026200778f02c58d1f382031cf39ec9c69739928 SHA1 b4f6d2b94ea1395819dbcaab6e9ab7c449f6de88 SHA256 938a79406f463534779dfdded24f6569a2b2708b4811ff5ca79282fb33c02ff9
+EBUILD nose-0.11.0.ebuild 1546 RMD160 906202dc7f75d4226fcd9fa823cfb65c56cd2c61 SHA1 4ed5b6b125cf9cab9674b9c7623221b8c80cbe1d SHA256 21d8a8a03a0553511d5f4fc0f2b3973c4a6b86641d353e91e9dfe31726058880
+MISC ChangeLog 4151 RMD160 ea6157d568ac309d928c36d269e5e5f26f31f1ce SHA1 d180f0b9ae14f5f0720338a53badb2f1c9844ebf SHA256 b7ce93356b7736360eed740d2902fdab790aa8d11efd00537d7b4205e710b298
 MISC metadata.xml 260 RMD160 9b94655ec2ecf067468e018cc1e59301d32438fe SHA1 85b2103b36cf8b9d8d7ed6d158f3ad09fb878dfa SHA256 4c805a4ea3fadc43fdc844aa0e0fb43bbea5bd057a2d6d144407e73eb3a445ea
