@@ -1,6 +1,15 @@
 # ChangeLog for dev-python/nose
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/nose/ChangeLog,v 1.26 2009/04/06 18:16:45 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/nose/ChangeLog,v 1.28 2009/05/14 18:13:13 jer Exp $
+
+  14 May 2009; Jeroen Roovers <jer@gentoo.org> nose-0.11.0.ebuild:
+  Marked ~hppa (bug #233554).
+
+*nose-0.11.0 (13 May 2009)
+
+  13 May 2009; Tiziano Müller <dev-zero@gentoo.org> +nose-0.11.0.ebuild,
+  +files/nose-0.11.0-disable_intersphinx.patch:
+  Version bump (bug #269074).
 
   06 Apr 2009; Raúl Porcel <armin76@gentoo.org> nose-0.10.4.ebuild:
   Add ~arm/~sh
